<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp">
        <TextView
            android:textSize="@dimen/_35sdp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/colorBlue"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:textColorHint="@color/colorSilver"
        android:layout_marginTop="@dimen/_100sdp"
        android:id="@+id/layoutEmail"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/colorBlack"
            android:maxLines="1"
            android:shadowColor="@color/colorBlue"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:id="@+id/layoutPassword"
        android:layout_below="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/colorSilver"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:maxLines="1"
                android:shadowColor="@color/colorBlue"
                android:hint="@string/password"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/showOrHide"
            android:textSize="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorSilver"
            android:layout_alignParentRight="true"
            android:text="@string/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <Button
        android:background="@drawable/bo_tron_xanh"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/layoutPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:id="@+id/btLogin"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="@color/colorBlack"
        android:background="@drawable/bo_tron_xam"
        android:text="@string/register"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btLogin"
        android:id="@+id/btRegister"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"/>

</RelativeLayout>