<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:id="@+id/btBackRegister"
            android:background="@drawable/ic_back_white"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"/>
        <TextView
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_25sdp"
            android:layout_toRightOf="@id/btBackRegister"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:textColorHint="@color/colorSilver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/etEmailRegister"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColorHint="@color/colorSilver"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:textColorHint="@color/colorSilver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:id="@+id/etPasswordRegister"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColorHint="@color/colorSilver"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:textColorHint="@color/colorSilver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:id="@+id/etRePassword"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColorHint="@color/colorSilver"
                android:hint="@string/rePassword"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btNextRegister"
        android:layout_margin="@dimen/_10sdp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bo_tron_xanh"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp">
        <ImageView
            android:layout_centerInParent="true"
            android:background="@drawable/ic_next_white"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"/>
    </RelativeLayout>
</RelativeLayout>